# wisard_rusty

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  deployment.yml
.devcontainer/: devcontainer.json
actix_wisard/: Cargo.toml
actix_wisard/lib/: lib.rs
benchmark/locust/: locust_bench.py  mnist.py
benchmark/wrk/: wrk_client.lua
dict_wisard/: Cargo.toml
dict_wisard/lib/: lib.rs  wisard.rs
lib/: mnist.rs
python_client/: async_requests.py  endpoint_examples.py  mnist.py  requirements.txt  wisard_client.py
rocket_wisard/: Cargo.toml
rocket_wisard/lib/: lib.rs
src/: actix_client.rs  actix_test.rs  api_test.rs  dict_test.rs  mnist_test.rs  rocket_test.rs  wisard_client.rs
src/lib/: lib.rs  wisard.rs
wisard/: Cargo.toml
wisard/lib/: dict_wisard.rs  error.rs  errors.rs  lib.rs  wisard_traits.rs
wrk_script/: wrk_client.lua
