[package]
name = "rusty-wisard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "actix_wisard_u8"
path = "src/actix_test.rs"

[workspace]
members = ["wisard", "actix_wisard"]

[dependencies]
actix-wisard = { path = "actix_wisard" }
wisard = { path = "wisard" }
