[package]
name = "rusty-wisard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "actix_wisard_server"
path = "src/wisard_server.rs"

[[bin]]
name = "actix_wisard_client"
path = "src/wisard_client.rs"

[lib]
name = "dataloaders"
path = "lib/dataloaders.rs"

[workspace]
members = ["wisard", "actix_wisard"]

[dependencies]
actix-wisard = { path = "actix_wisard" }
wisard = { path = "wisard" }
async-std = { version = "1.9.0", features = ["attributes"] }
byteorder = "1.4.3"
flate2 = "1.0.20"
http-types = "2.12.0"
serde = { version = "1.0.126", features = ["derive"] }
surf = "2.2.0"
