[package]
name = "actix_wisard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "actix_wisard"
path = "lib/lib.rs"

[dependencies]
actix-multipart = "0.3.0"
actix-files = "0.5.0"
async-std = "1.9.0"
futures = "0.3.16"
actix-web = "3.3.2"
dict_wisard = { path = "../dict_wisard" }
