[package]
name = "actix-wisard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "actix_wisard"
path = "lib/lib.rs"

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.2"
env_logger = "0.9.0"
futures = "0.3.16"
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "0.2.25", features = [
    "full",
] } # THIS STAYS IN THIS VERSION AS LONG AS ACTIX-WEB DEPENDS ON IT
wisard = { path = "../wisard" }
