[package]
name = "dict_wisard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dict_wisard"
path = "lib/lib.rs"

[[bin]]
name = "test_lib"
path = "bin/main.rs"

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
bincode = "1.3.3"
rand = "0.8.4"
byteorder = "1.4.3"
ndarray = "0.15.3"
flate2 = "1.0.20"
rayon = "1.5.1"
