[package]
name = "wisard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wisard"
path = "lib/lib.rs"

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
bincode = "1.3.3"
rand = "0.8.4"
rayon = "1.5.1"
